[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://src/Card/Card.gd" type="Script" id=2]
[ext_resource path="res://assets/Fonts/Font.tres" type="DynamicFont" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 96, 128 )

[node name="Card" type="Node2D"]
z_index = 10
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 3.8147e-06 )
scale = Vector2( 3, 4 )
texture = ExtResource( 1 )

[node name="Collision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision"]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Cost" type="Label" parent="."]
margin_left = -88.0
margin_top = -120.0
margin_right = -80.0
margin_bottom = -106.0
custom_fonts/font = ExtResource( 3 )
text = "0"

[node name="Description" type="Label" parent="."]
margin_left = -88.0
margin_top = 16.0
margin_right = 88.0
margin_bottom = 112.0
text = "Description"
autowrap = true

[node name="Name" type="Label" parent="."]
margin_left = -48.0
margin_top = -120.0
margin_right = 48.0
margin_bottom = -106.0
text = "Name"
align = 1
valign = 1

[node name="MouseHandler" type="Control" parent="."]
margin_left = -96.0
margin_top = -128.0
margin_right = 96.0
margin_bottom = 128.0
mouse_filter = 1

[connection signal="gui_input" from="MouseHandler" to="." method="_on_Control_gui_input"]
[connection signal="mouse_entered" from="MouseHandler" to="." method="_on_Control_mouse_entered"]
[connection signal="mouse_exited" from="MouseHandler" to="." method="_on_Control_mouse_exited"]
